--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     height: 8%;
     margin: 0%;
-    padding: 2% 2% 1% 2%;
+    padding: 2% 2% 3% 2%;
     background-color: #800000;
     border-style: hidden hidden solid hidden;
     border-width: 1%;
@@ -28,6 +28,10 @@ body {
 .active {
     color: #dddddd;
     background-color: #333333;
+}
+
+.topic {
+    margin: 1%;
 }
 
 .main {
